--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -90,7 +90,7 @@ hometop:
     sup: 志海融新
     title: 用积极心态迎接每一天💕
     url: https://www.zen-harmony.top
-    img: https://bing.img.run/rand.php
+    img: https://api.dujin.org/bing/1920.php
     color: "none"
 
 # Article Top Banner
