--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -7,7 +7,7 @@ links:
       link_list:
        - name: 青稚
          link: https://blog.linux-qitong.top
-         avatar: https://blog.linux-qitong.top/img/avatar.avif
+         avatar: https://blog.linux-qitong.top/img/avatar.webp
          descr: 越努力，越幸运. 
        - name: Aninana
          link: https://aninana.zen-harmony.top
@@ -43,5 +43,5 @@ links:
          descr: Software Developer~
        - name: 璜珀
          link: https://blog.hpcesia.com
-         avatar: https://blog.hpcesia.com/img/myavatar.webp
+         avatar: https://blog.hpcesia.com/assets/img/avatar.webp
          descr: 一个想要摆烂却又不甘于躺平的人.
