--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -19,7 +19,7 @@ links:
          descr: hanzn-zzx~
        - name: silvaire_qwq
          link: https://lunars.site
-         avatar: https://imgbed.lunars.site/file/1734695833083_Image_135898539474484.jpg
+         avatar: https://wsrv.nl/?url=avatars.githubusercontent.com/u/184231508
          descr: Stay hungry, stay foolish.
        - name: Ariasaka
          link: https://blog.yaria.top
